added the high_score_level to the model

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,5 +10,16 @@
     "args": [
         "${workspaceFolder}/tests/",
         "--show-capture=stdout",
+    ],
+    "configurations": [
+
+        {
+            "name": "Python: Current File",
+            "type": "python",
+            "request": "launch",
+            "program": "${file}",
+            "console": "integratedTerminal",
+            "justMyCode": false
+        }
     ]
 }
